# grounded-code-mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  config.toml  config.toml.example  constraints.md  evals.md  intent.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
graph/: concept_graph.json
scripts/: _ingest_check.py  ecfr_xml_to_md.py  ingest-missing.sh  repair_manifest.py  split_pdf_to_markdown.py  sync-sources.sh
skill/: README.md  package.json
skill/extensions/: index.ts
sources/4d-legacy/: README.md
sources/api-design/: README.md
sources/architecture/: README.md
sources/automation/: README.md
sources/databases/: README.md
sources/dotnet/: README.md
sources/edge-ai/: README.md
sources/gov/: README.md
sources/industrial-automation/: README.md
sources/internal/: README.md
sources/javascript/: README.md
sources/langchain/: README.md
sources/langgraph/: README.md
sources/langsmith/: README.md
sources/patterns/: README.md
sources/php/: README.md
sources/python/: README.md
sources/robotics/: README.md
sources/rust/: README.md
sources/ssis/: README.md
sources/systems-thinking/: README.md
sources/ui-ux/: README.md
src/graph/: __init__.py  graph_builder.py  graph_store.py  seed_graph.py
src/grounded_code_mcp/: __init__.py  __main__.py  chunking.py  config.py  embeddings.py  ingest.py  manifest.py  manifest_repair.py  parser.py  server.py  vectorstore.py
tests/: __init__.py  conftest.py  test_chunking.py  test_cli.py  test_config.py  test_embeddings.py  test_graph_builder.py  test_graph_store.py  test_ingest.py  test_ingest_graph.py  test_manifest.py  test_parser.py  test_repair_manifest.py  test_seed_graph.py  test_server.py  test_server_graph.py  test_vectorstore.py
thoughts/shared/plans/: 2026-05-04-graph-rag-new-relationships-format.md
thoughts/shared/research/: 2026-05-04-graph-rag-grounded-code-mcp.md
