[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grounded-code-mcp"
version = "0.1.0"
description = "Local MCP server providing RAG over a persistent knowledge base of technical documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Michael Alber" }
]
keywords = ["mcp", "rag", "documentation", "llm", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp<3",
    "docling>=2.70.0",
    "qdrant-client",
    "chromadb>=1.0.0",
    "ollama",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit[toml]",
    "pip-audit",
]

[project.scripts]
grounded-code-mcp = "grounded_code_mcp.__main__:cli"

[project.urls]
Homepage = "https://github.com/michaelalber/grounded-code-mcp"
Repository = "https://github.com/michaelalber/grounded-code-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/grounded_code_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "S101",   # Use of assert (needed for tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", ".venv"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/grounded_code_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
