[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grounded-code-mcp"
version = "2.1.0"
description = "Local MCP server providing RAG over a persistent knowledge base of technical documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Michael Alber" }
]
keywords = ["mcp", "rag", "documentation", "llm", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Light core: the reusable RAG engine (parser/chunking/embeddings/vectorstore/config)
# imports only these. Heavy/role-specific deps live in the extras below so library
# consumers (e.g. second-brain) can depend on the core without pulling Docling/fastmcp/etc.
# Grounded's own tool install is `[all]` (see extras).
dependencies = [
    "qdrant-client",
    "ollama",
    "pydantic>=2.0",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
# Binary-format document parsing (ingest role) — Docling is imported lazily.
parse = [
    "docling>=2.70.0",
    "pypdf>=4.0",
]
# MCP server + CLI (grounded's own product role).
serve = [
    "fastmcp>=3.2.0",
    "click>=8.0",
    "rich>=13.0",
]
# Concept-graph force path.
graph = [
    "networkx>=3.2",
]
# ChromaDB vector-store fallback (Docker-free). Qdrant is the default; ChromaStore
# code stays in vectorstore.py but its dependency is opt-in.
chroma = [
    "chromadb>=1.0.0",
]
# Full tool install — grounded's own runtime needs all roles.
all = [
    "grounded-code-mcp[parse,serve,graph,chroma]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "bandit[toml]",
    "pip-audit",
]

[project.scripts]
grounded-code-mcp = "grounded_code_mcp.__main__:cli"

[project.urls]
Homepage = "https://github.com/michaelalber/grounded-code-mcp"
Repository = "https://github.com/michaelalber/grounded-code-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/grounded_code_mcp", "src/graph"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # Line too long - handled by formatter
    "SIM105",  # contextlib.suppress - optional style preference
    "SIM108",  # Ternary operator - not always more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests", ".venv"]

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
markers = [
    "integration: integration tests requiring external services",
    "slow: tests that take a long time to run",
]

[tool.coverage.run]
source = ["src/grounded_code_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
